# financial_fpa_crewai

./: .env.example  .gitignore  ENV_LOADING_FIX.md  FIX_ENV_FOR_OLLAMA.md  IMPORT_FIX.md  OLLAMA_SETUP.md  README.md  STREAMLIT_IMPORT_FIX.md  STREAMLIT_README.md  WEAVIATE_FIX.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py  test_charts.py  test_fpa_tool.py
cache/: fpa_analysis_cache.json
knowledge/: fpa_frameworks.txt  industry_benchmarks.json
src/data/: README.md  modified_financial_data.csv
src/financial_fpa/: crew.py  event_listener.py  flow.py  main.py  models.py
src/financial_fpa/config/: agents.yaml  tasks.yaml
src/fpa_tools/: __init__.py  analytics_engine.py  chart_tools.py  data_validator.py  fpa_operations.py  logger.py  pdf_generator.py
