[project]
name = "financial_fpa"
version = "0.1.0"
description = "financial_FPA using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
financial_fpa = "financial_fpa.main:run"
run_crew = "financial_fpa.main:run"
train = "financial_fpa.main:train"
replay = "financial_fpa.main:replay"
test = "financial_fpa.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
